# interpolation_IITP

./: .coverage  README.md  interpolation_methods.py  monkeytype.sqlite3  noxfile.py  pyproject.toml
docs/source/: api.rst  conf.py  index.rst  introduction.rst  usage.rst
interpolation_package/: cli_interpolation.py  interpolation_methods.py
scripts/: generate_docs.sh  performance_measure.py
test/: test_lagrange.py  test_linear.py  test_nearest.py
tests/: test_cli.py  test_lagrange.py  test_linear.py  test_nearest.py
