[project]
name = "interpolation-iitp"
version = "0.1.0"
description = "A python project demostrating basic interpolation methods."
authors = [
    { name = "sofiadorogova", email = "113040802+sofiadorogova@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21,<2.0",
    "matplotlib>=3.5,<4.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "interpolation_package" }
]