[project]
name = "interpolation-iitp"
version = "0.1.0"
description = "A python project demostrating basic interpolation methods."
authors = [
    { name = "sofiadorogova", email = "113040802+sofiadorogova@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.21,<2.0",
    "matplotlib>=3.5,<4.0",
    "ruff (>=0.9.7,<0.10.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "nox (>=2025.2.9,<2026.0.0)",
    "furo (>=2024.8.6,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "interpolation_package" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
nox = "^2025.2.9"
nox-poetry = "^1.2.0"
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-click = "^3.1.0"
mypy = "^1.10.0"
monkeytype = "^23.3.0"

[tool.poetry.scripts]
interp-demo = "interpolation_package.cli_interpolation:main"
measure-performance = "scripts.performance_measure:main"

[tool.ruff]
select = ["E", "F", "B", "I", "C90", "ANN"]
ignore = []
fixable = ["ALL"]
line-length = 88

[tool.coverage.run]
source = ["interpolation_package"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]